syntax = "proto3";

package inventory;
option go_package = "./inventory";

service InventoryService {
  rpc CheckStock(StockRequest) returns (StockResponse);
}

message StockRequest {
  repeated uint32 product_ids = 1;
  repeated uint32 quantities = 2;
}

message StockResponse {
  bool in_stock = 1;
  string message = 2;
}